--- a/Themes/Opera Theme/Opera.css
+++ b/Themes/Opera Theme/Opera.css
@@ -7,7 +7,7 @@
     --daccentcolor: 190, 78, 180;
     --dfont: Whitney, Helvetica Neue, Helvetica, Arial, sans-serif;
     --dtextshadow: transparent;
-    --dbackground: url();
+    --dbackground: url(https://github.com/Dev-360/BetterDiscord/blob/main/Themes/Opera%20Theme/Black.png);
     --dbackgroundsize: cover;
     --dblur: 0px;
     --dbackdrop: rgba(0, 0, 0, 0.85);
