--- a/Themes/Opera Theme/Opera.theme.css
+++ b/Themes/Opera Theme/Opera.theme.css
@@ -19,7 +19,7 @@
         /* font used in most places														*/
         --textshadow: transparent;
         /* default: transparent			(textshadow for text ontop of accentcolor nodes, ONLY accepts a color, no px)	*/
-        --background: url(https://mwittrien.github.io/BetterDiscordAddons/Themes/BasicBackground/background.jpg);
+        --background: url(https://github.com/Dev-360/BetterDiscord/blob/main/Themes/Opera%20Theme/Black.png);
         /* general background image						*/
         --backgroundsize: cover;
         /* default: cover				(sizefit of general background - values: [cover/contain/auto])					*/
